v1.0.0/modules/schema/pages/class/Receipt.adoc
= `Receipt`
:toclevels: 4


+++Record of total receipted payment from customer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Receipt`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Receipt`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Receipt {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LineDetail {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Transaction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CashierShift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Tender {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VendorShift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Receipt -> LineDetail: line


Receipt -> Transaction: Transactions


Receipt -> CashierShift: CashierShift


Receipt -> Tender: Tenders


Receipt -> VendorShift: VendorShift


Receipt -> DiagramObject: DiagramObjects


Receipt -> InstanceSet: InstanceSet


Receipt -> Name: Names


Receipt -> ChangeSetMember: PropertiesCIMDataObject


Receipt -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<Tenders,`Tenders`>>
| 1..*
| xref::class/Tender.adoc[`Tender`]
| +++All payments received in the form of tenders recorded by this receipt.+++

| <<Transactions,`Transactions`>>
| 1..*
| xref::class/Transaction.adoc[`Transaction`]
| +++All transactions recorded for this receipted payment.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<CashierShift,`CashierShift`>>
| 0..1
| xref::class/CashierShift.adoc[`CashierShift`]
| +++Cashier shift during which this receipt was recorded.+++

| <<VendorShift,`VendorShift`>>
| 0..1
| xref::class/VendorShift.adoc[`VendorShift`]
| +++Vendor shift during which this receipt was recorded.+++

| <<isBankable,`isBankable`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if this receipted payment is manually bankable, otherwise it is an electronic funds transfer.+++

| <<line,`line`>>
| 0..1
| xref::class/LineDetail.adoc[`LineDetail`]
| +++Receipted amount with rounding, date and note.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CashierShift]
=== `CashierShift`
+++Cashier shift during which this receipt was recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.CashierShift`
| Cardinality
| 0..1
| Type
| xref::class/CashierShift.adoc[`CashierShift`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isBankable]
=== `isBankable`
+++True if this receipted payment is manually bankable, otherwise it is an electronic funds transfer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.isBankable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#line]
=== `line`
+++Receipted amount with rounding, date and note.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.line`
| Cardinality
| 0..1
| Type
| xref::class/LineDetail.adoc[`LineDetail`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Tenders]
=== `Tenders`
+++All payments received in the form of tenders recorded by this receipt.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.Tenders`
| Cardinality
| 1..*
| Type
| xref::class/Tender.adoc[`Tender`]


|===

//[discrete]
[#Transactions]
=== `Transactions`
+++All transactions recorded for this receipted payment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.Transactions`
| Cardinality
| 1..*
| Type
| xref::class/Transaction.adoc[`Transaction`]


|===

//[discrete]
[#VendorShift]
=== `VendorShift`
+++Vendor shift during which this receipt was recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.VendorShift`
| Cardinality
| 0..1
| Type
| xref::class/VendorShift.adoc[`VendorShift`]


|===


