v1.1.0/modules/schema/pages/class/Receipt.adoc
= `Receipt`
:toclevels: 4


+++Record of total receipted payment from customer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Receipt`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Receipt`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CashierShift,`CashierShift`>>
//| [[slots_table.CashierShift]]<<CashierShift,`CashierShift`>>
| 0..1 +
xref::class/CashierShift.adoc[`CashierShift`]
| +++Cashier shift during which this receipt was recorded.+++
| _n/a_

| <<Tenders,`Tenders`>>
//| [[slots_table.Tenders]]<<Tenders,`Tenders`>>
| 1..* +
xref::class/Tender.adoc[`Tender`]
| +++All payments received in the form of tenders recorded by this receipt.+++
| _n/a_

| <<Transactions,`Transactions`>>
//| [[slots_table.Transactions]]<<Transactions,`Transactions`>>
| 1..* +
xref::class/Transaction.adoc[`Transaction`]
| +++All transactions recorded for this receipted payment.+++
| _n/a_

| <<VendorShift,`VendorShift`>>
//| [[slots_table.VendorShift]]<<VendorShift,`VendorShift`>>
| 0..1 +
xref::class/VendorShift.adoc[`VendorShift`]
| +++Vendor shift during which this receipt was recorded.+++
| _n/a_

| <<isBankable,`isBankable`>>
//| [[slots_table.isBankable]]<<isBankable,`isBankable`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if this receipted payment is manually bankable, otherwise it is an electronic funds transfer.+++
| _n/a_

| <<line,`line`>>
//| [[slots_table.line]]<<line,`line`>>
| 0..1 +
xref::class/LineDetail.adoc[`LineDetail`]
| +++Receipted amount with rounding, date and note.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CashierShift]
=== `CashierShift`
+++Cashier shift during which this receipt was recorded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.CashierShift`
| Cardinality
| 0..1
| Type
| xref::class/CashierShift.adoc[`CashierShift`]


|===

////
[.text-left]
--
<<slots_table.CashierShift,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isBankable]
=== `isBankable`
+++True if this receipted payment is manually bankable, otherwise it is an electronic funds transfer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.isBankable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isBankable,&#10548;>>
--
////


//[discrete]
[#line]
=== `line`
+++Receipted amount with rounding, date and note.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.line`
| Cardinality
| 0..1
| Type
| xref::class/LineDetail.adoc[`LineDetail`]


|===

////
[.text-left]
--
<<slots_table.line,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Tenders]
=== `Tenders`
+++All payments received in the form of tenders recorded by this receipt.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.Tenders`
| Cardinality
| 1..*
| Type
| xref::class/Tender.adoc[`Tender`]


|===

////
[.text-left]
--
<<slots_table.Tenders,&#10548;>>
--
////


//[discrete]
[#Transactions]
=== `Transactions`
+++All transactions recorded for this receipted payment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.Transactions`
| Cardinality
| 1..*
| Type
| xref::class/Transaction.adoc[`Transaction`]


|===

////
[.text-left]
--
<<slots_table.Transactions,&#10548;>>
--
////


//[discrete]
[#VendorShift]
=== `VendorShift`
+++Vendor shift during which this receipt was recorded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Receipt.VendorShift`
| Cardinality
| 0..1
| Type
| xref::class/VendorShift.adoc[`VendorShift`]


|===

////
[.text-left]
--
<<slots_table.VendorShift,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CashierShift.adoc[`CashierShift`] | xref::class/CashierShift.adoc#Receipts[`Receipts`]



| xref::class/Tender.adoc[`Tender`] | xref::class/Tender.adoc#Receipt[`Receipt`]



| xref::class/Transaction.adoc[`Transaction`] | xref::class/Transaction.adoc#Receipt[`Receipt`]



| xref::class/VendorShift.adoc[`VendorShift`] | xref::class/VendorShift.adoc#Receipts[`Receipts`]


|===

